# JIN-Gillian-Leo

./: CMakeLists.txt  README.md  diagrammeUML.txt
doc/: Makefile  diagrammeUML.txt  diagrammeUML_patterns.txt
resources/: map_tileset.tsx
resources/piskel_files/: Player.piskel  carrot.piskel  corn.piskel  fraise.piskel  health_bar.piskel  health_bar_old.piskel  map_tileset.piskel  milk_laser.piskel  room_block.piskel  slash.piskel  stair.piskel
resources/rooms/: DR_1.txt  EmptyRoomLayout.txt  L_1.txt  Level0.txt  Lobby.txt  StartRoom.txt  TestRoom1.txt  TestRoom1_big.txt  TestRoom2.txt  TestStartRoom.txt  UL_1.txt  UR_1.txt  room_murs.txt
resources/tilemaps/: DR_1.tmx  L_1.tmx  Lobby.tmx  StartRoom.tmx  TestStartRoom.tmx  TestStartRoom_.tmx  TileMap.tsx  UL_1.tmx  UR_1.tmx  room_murs.tmx  tileset_city.tsx  tileset_test48.tsx
src/core/: AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  Carrot.cpp  Carrot.h  Constants.h  Corn.cpp  Corn.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Graph.cpp  Graph.h  Health.cpp  Health.h  Hitbox.cpp  Hitbox.h  Hurtbox.cpp  Hurtbox.h  LevelManager.cpp  LevelManager.h  LevelMediator.h  LevelTransition.cpp  LevelTransition.h  MusicManager.cpp  MusicManager.h  MyMain.cpp  MyMain.h  MyMainTest.cpp  MyMainTest.h  Player.cpp  Player.h  SFMLOrthogonalLayer.h  SFMLOrthogonalLayer.hpp  TextureHandler.cpp  TextureHandler.h  TextureManager.cpp  TextureManager.h  Wall.cpp  (+6 more)
src/main/: CMakeLists.txt  mainLauncher.cpp
src/test/: CMakeLists.txt  unitTests.cpp
